# azure_functions_rs

./: .gitignore  Cargo.toml  README.md  build.rs
MyTimer/: function.json
azure_functions_attributes/: Cargo.toml
azure_functions_attributes/src/: inputs.rs  lib.rs  trigger.rs
azure_functions_runtime/: Cargo.toml
azure_functions_runtime/src/: lib.rs
azure_functions_types/: Cargo.toml
azure_functions_types/src/: lib.rs  queue_trigger.rs  serialization.rs  timer_info.rs
examples/initial/: Cargo.toml
examples/initial/src/: main.rs  my_queue_trigger.rs  my_timer_trigger.rs
examples1/initial/: Cargo.toml
examples1/initial/src/: main.rs
func_proc_macros/: Cargo.toml
func_proc_macros/src/: lib.rs
func_runtime/: Cargo.toml
func_runtime/src/: lib.rs
func_types/: Cargo.toml
func_types/src/: lib.rs
src/: main.rs  my_queue_trigger.rs  my_timer_trigger.rs
