[package]
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2018"
name = "azure_functions_attributes"
version = "0.1.0"

[dependencies]
darling = "*"
proc-macro2 = "1"
quote = "*"
syn = { version = "1", features = ["full"] }
func_types = { path = "../func_types" }
actix-web = { version = "*" }
serde_json = "*"

[lib]
proc-macro = true
