[package]
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2018"
name = "azure_functions_attributes"
version = "0.1.0"

[dependencies]
darling = "0.12"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
azure_functions_types = { version = "0.1.0", path = "../azure_functions_types" }
actix-web = { version = "3" }
serde_json = "1"

[lib]
proc-macro = true
