[package]
name = "azure_functions_types"
version = "0.1.0"
authors = ["Damien Pontifex <damien.pontifex@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
